# hello_qt

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: build.yml
